2010-11-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* openvassd/attack.c (attack_network): Remove stray log message. Don't
	try to add target to the arglist if they are not set.

2010-11-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* VERSION: Updated from 3.1.2.SVN to 3.2.0.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Increased PROJECT_NUMBER accordingly.

2010-11-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* cnvts/find_service/find_service.c,
	cnvts/openvas_tcp_scanner/openvas_tcp_scanner.c,
	cnvts/synscan/synscan.c, openvassd/nasl_plugins.c,
	openvassd/comm.h, openvassd/utils.c, openvassd/otp_1_0.c,
	openvassd/plugs_req.c, openvassd/preferences.c, openvassd/ntp_11.c,
	openvassd/utils.h, openvassd/plugs_req.h, openvassd/attack.c,
	openvassd/ntp_11.h, openvassd/save_kb.c, openvassd/shared_socket.c,
	openvassd/save_kb.h, openvassd/piic.c, openvassd/nes_plugins.c,
	openvassd/pluginlaunch.c, openvassd/plugs_hash.c,
	openvassd/pluginload.c, openvassd/hosts.c, openvassd/auth.c,
	openvassd/users.c, openvassd/oval_plugins.c, openvassd/openvassd.c,
	openvassd/pluginload.h, openvassd/users.h, openvassd/locks.c,
	openvassd/rules.c, openvassd/comm.c, openvassd/parser.c,
	openvassd/pluginscheduler.c: Adjusted include paths for header
	files of libopenvas_misc.

2010-11-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Added support for network level scans as described in OpenVAS Change
	Request #49 (see http://www.openvas.org/openvas-cr-49.html).

	* openvassd/preferences.c (preferences_network_scan): New function to
	return the value of the network_scan preference as int.

	* openvassd/preferences.h: Updated.

	* openvassd/pluginscheduler.c (plugins_scheduler_init): Changed
	function to accept an only_network switch. Remove NVTs in
	ACT_GATHER_INFO and up from the schedule if only_network is set.

	* openvassd/pluginscheduler.h: Updated.

	* openvassd/save_kb.c (save_kb): Ensure the KB is saved during a